bug got squashed

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
       width: 100%;
       height: 100%;
       border: none;
-      z-index: 1;
+      z-index: -1;
     }
     html, body {
       margin: 0;
